--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "jwt-decode": "^2.2.0",
     "vue": "^2.6.10",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.0.7",
     "vuex": "^3.1.1"
   },
